fix: improved darkmode spacing

--- a/quartz/components/styles/navbar.scss
+++ b/quartz/components/styles/navbar.scss
@@ -287,6 +287,7 @@
   right: 0;
   top: 5%;
   text-align: right;
+  align-items: center;
   display: flex;
   flex-direction: row;
 
@@ -323,7 +324,8 @@
     transition: opacity 0.5s ease;
     margin: 0;
     margin-right: calc(0.75 * $base-margin);
-    margin-top: calc(-0.25 * $base-margin);
+    margin-top: 0;
+    line-height: var(--darkmode-icon-size);
     flex-shrink: 0; // Don't want it to wrap
     font-size: var(--font-size-minus-2);
     font-style: italic; // Differentiate from navbar links
@@ -335,7 +337,9 @@
     }
 
     @media all and (max-width: $max-mobile-width) {
-      margin-top: calc(0.25 * $base-margin);
+      font-size: var(--font-size-minus-1); // Make easier to read on mobile
+      margin-right: $base-margin; // More space for the theme label
+      margin-top: 0; // Use align-items: center
     }
   }
 
